# paintingLeRobot

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  simple_joint_controller.py
image_generation/: demo_editing.py  fix_huggingface.py  imagegen.py  imagegen_simple.py
src/: color_quantization.py  config.py  image_generation.py  layers_to_waypoints.py  main.py  robot_controller.py  speech_processing.py  speech_prorcessing.py  waypoint_to_motor_value.py
test/: test_aspect_ratio_fix.py  test_aspect_ratios.py  test_image_generation.py  test_interactive.py  test_lerobot_api.py  test_lerobot_camera.py  test_urdf.py  test_vibe_movement  test_vibe_movement.py
utils/: depth_camera.py  joint_calibration.json
