[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project"
dynamic = ["version", "description"]
authors = [
    {name = "Your Name", email = "you@tum.de"},
]
dependencies = [
    # PyTorch etc.
    "torch ~= 2.7",
    "lightning ~= 2.5",
    "torchmetrics",
    "torchvision",
    "einops",

    # General science & ml
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",

    # Image Generation
    "vertexai",

    # Plotting & visualization
    "matplotlib",

    # hydra & logging
    "hydra-core ~= 1.3",
    "hydra-submitit-launcher",
    "wandb ~= 0.19",

    # Utilities
    "tqdm",
    "rich",
    "ipython",
    "ipdb",
    "jupyterlab",
    "ipympl",
]
requires-python = ">= 3.13"
license = {text = "MIT"}

[tool.ruff]
line-length = 90

[tool.ruff.lint.isort]
known-third-party = ["wandb"]
